<resources>
    <string name="app_name" translatable="false">RAF_WALLET</string>
    <string name="novcanik_sistem_za_studente_raf_a">Novcanik sistem za studente RAF-a</string>
    <string name="unesite_ime">Unesite ime</string>
    <string name="unesite_prezime">Unesite prezime</string>
    <string name="unesite_ime_banke">Unesite ime banke</string>
    <string name="unesite_sifru">Unesite sifru</string>
    <string name="prijava">Prijava</string>
    <string name="stanje">Stanje</string>
    <string name="unos">Unos</string>
    <string name="liste">Liste</string>
    <string name="profil">Profil</string>
    <string name="podaci_o_korisniku">Podaci o korisniku</string>
    <string name="ime">Ime:</string>
    <string name="prezime">Prezime:</string>
    <string name="banka">Banka:</string>
    <string name="sacuvaj">Sacuvaj</string>
    <string name="izmena_podataka_o_korisniku">Izmena podataka o korisniku</string>
    <string name="pregled_ukupnog_stanja_racuna">Pregled ukupnog stanja racuna</string>
    <string name="prihod">Prihod:</string>
    <string name="rashod">Rashod:</string>
    <string name="razlika">Razlika:</string>
    <string name="pregled_prihoda_rashoda">Pregled prihoda/rashoda</string>
    <string name="naslov">Naslov:</string>
    <string name="kolicina">Kolicina:</string>
    <string name="opis">Opis:</string>
    <string name="u_redu">U redu</string>
    <string name="podaci_o_prihodu_rashodu">Podaci o prihodu/rashodu</string>
    <string name="naslovHint">Naslov</string>
    <string name="odustani">Odustani</string>
    <string name="neki_opis">Neki opis</string>
    <string name="izmeni">Izmeni</string>
    <string name="unos_novog_prihoda_ili_rashoda">Unos novog prihoda ili rashoda</string>
    <string name="audio" translatable="false">Audio</string>
    <string name="dodaj_u_listu">Dodaj u listu</string>
    <string name="opis_unosa">Opis</string>
    <string name="kolicina_unosa">Kolicina</string>
    <string name="odjava">Odjava</string>
    <string name="izmeni_profil">Izmeni</string>

    <string-array name="spinnerItems">
        <item>Prihod</item>
        <item>Rashod</item>
    </string-array>
</resources>