<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/UnosFragmentText"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:text="@string/unos_novog_prihoda_ili_rashoda"/>

    <Spinner
        android:id="@+id/UnosFragmentSpinner"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="40dp"
        android:entries="@array/spinnerItems"
        android:spinnerMode="dropdown"
        android:padding="0dip"/>

    <EditText
        android:id="@+id/UnosFragmentNaslovInput"
        style="@style/FragmentTextStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:textSize="24sp"
        android:textColorHint="@color/gray"
        android:hint="@string/naslovHint"/>

    <EditText
        android:id="@+id/UnosFragmentKolicinaInput"
        style="@style/FragmentTextStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="320dp"
        android:textSize="24sp"
        android:textColorHint="@color/gray"
        android:hint="@string/kolicina_unosa"/>

    <CheckBox
        android:id="@+id/UnosFragmentCheckBox"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="380dp"
        android:layout_marginStart="40dp"
        android:text="@string/audio"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/UnosFragmentOpisInput"
        android:layout_marginTop="490dp"
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:background="@android:drawable/editbox_background"
        android:paddingStart="10dp"
        android:layout_marginStart="30dp"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:textColorHint="@color/gray"
        android:hint="@string/opis_unosa"/>

    <Button
        android:id="@+id/UnosFragmentDodajUListuButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="650dp"
        android:layout_marginStart="130dp"
        android:text="@string/dodaj_u_listu" />

</FrameLayout>