<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LogInActivity">

    <ImageButton
        android:id="@+id/LodInActivityImageButton"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="100dp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_dollar"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="225dp"
        android:tint="@color/black"/>

    <TextView
        android:id="@+id/LodInActivityText"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="230dp"
        android:layout_marginStart="150dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/novcanik_sistem_za_studente_raf_a"
        />

    <EditText
        android:id="@+id/LodInActivityEnterName"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginStart="20dp"
        android:hint="@string/unesite_ime"
        android:textColorHint="@color/material_on_background_disabled"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/LodInActivityEnterSurname"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="20dp"
        android:hint="@string/unesite_prezime"
        android:textColorHint="@color/material_on_background_disabled"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/LodInActivityEnterBank"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:layout_marginStart="20dp"
        android:hint="@string/unesite_ime_banke"
        android:textColorHint="@color/material_on_background_disabled"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/LodInActivityEnterPass"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="20dp"
        android:hint="@string/unesite_sifru"
        android:textColorHint="@color/material_on_background_disabled"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/LodInActivityButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginStart="150dp"
        android:text="@string/prijava" />

</FrameLayout>