<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/StanjeFragmentText"
        style="@style/FragmentTextStyle"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/pregled_ukupnog_stanja_racuna" />

    <TextView
        android:id="@+id/StanjeFragmentPrihodText"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:text="@string/prihod"
        android:textColor="@color/green"/>

    <TextView
        android:id="@+id/StanjeFragmentPrihodInput"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="250dp"
        android:textSize="24sp"
        android:textColor="@color/green"/>

    <TextView
        android:id="@+id/StanjeFragmentRashodText"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="350dp"
        android:text="@string/rashod"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/StanjeFragmentRashodInput"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="350dp"
        android:textSize="24sp"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/StanjeFragmentRazlika"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="450dp"
        android:text="@string/razlika"/>

    <TextView
        android:id="@+id/StanjeFragmentRazlikaInput"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="450dp"
        android:textSize="24sp" />

</FrameLayout>